[package]
name = "language_implementation_patterns"
version = "0.1.0"
authors = ["makanai5610 <takumi.k.5610@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ll1_recursive_descent_lexer = { package = "ll1_recursive_descent_lexer", path = "./LL1RecursiveDescentLexer/" }
ll1_recursive_descent_parser = { package = "ll1_recursive_descent_parser", path = "./LL1RecursiveDescentParser" }
